fixed button spacing

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
   width: 1100px; /*  use your width here */
 }
 
-
 .overviewFull {
   height: 700px;
   margin-bottom: 40px;
@@ -85,15 +84,15 @@
   position: relative;
   display: table-cell;
   width: 4.46rem;
-  height: .5rem;
+  height: 0.5rem;
   overflow: hidden;
-  margin-right: .22rem;
+  margin-right: 0.22rem;
   vertical-align: middle;
 }
 .grade-star-outside {
   height: 0.16rem;
-  -webkit-border-radius: .15rem;
-  border-radius: .15rem;
+  -webkit-border-radius: 0.15rem;
+  border-radius: 0.15rem;
   overflow: hidden;
   background: #e5e5e5;
 }
@@ -150,15 +149,15 @@
   position: relative;
   display: table-cell;
   width: 100rem;
-  height: .5rem;
+  height: 0.5rem;
   overflow: hidden;
-  margin-right: .22rem;
+  margin-right: 0.22rem;
   vertical-align: middle;
 }
 .grade-product-outside {
   height: 0.16rem;
-  -webkit-border-radius: .15rem;
-  border-radius: .15rem;
+  -webkit-border-radius: 0.15rem;
+  border-radius: 0.15rem;
   overflow: hidden;
   background: #e5e5e5;
 }
@@ -701,6 +700,7 @@ button.QnAButton {
   color: black;
   background-color: white;
   border-color: black;
+  margin: 1%;
 }
 
 #cartIcon {
